snapshots/syntax/library/statements/savepicture/savepicture_at_module_level.snap
---
source: src/syntax/library/statements/system_interaction/savepicture.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SavePictureStatement
      children:
        - kind: SavePictureKeyword
          text: SavePicture
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Picture1
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Picture
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"image.bmp\""
        - kind: Newline
          text: "\n"
