snapshots/syntax/library/statements/savepicture/savepicture_in_class_module.snap
---
source: src/syntax/library/statements/savepicture.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DimStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: picData
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: PictureBox
        - kind: Newline
          text: "\n"
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: PublicKeyword
          text: Public
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ExportPicture
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: Identifier
              text: fileName
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: StringKeyword
              text: String
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SavePictureStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SavePictureKeyword
                  text: SavePicture
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: picData
                - kind: PeriodOperator
                  text: "."
                - kind: Identifier
                  text: Picture
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: fileName
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
