snapshots/syntax/library/statements/savepicture/savepicture_multiple_on_same_line.snap
---
source: src/syntax/library/statements/savepicture.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SavePictureStatement
      children:
        - kind: SavePictureKeyword
          text: SavePicture
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Pic1
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Picture
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"a.bmp\""
        - kind: ColonOperator
          text: ":"
        - kind: Whitespace
          text: " "
        - kind: SavePictureKeyword
          text: SavePicture
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Pic2
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Picture
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"b.bmp\""
        - kind: Newline
          text: "\n"
